// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tests for <SearchInput /> should match normal SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    id="1"
    name="test"
    type="normal"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaDescribedBy": null,
      "ariaLabel": null,
      "children": <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        className="md-search-input__icon"
        color=""
        description=""
        isAria={true}
        name="search_20"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />,
      "className": "md-search-input",
      "clear": false,
      "clearAriaLabel": null,
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": null,
      "iconNode": null,
      "id": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "label": "",
      "multiline": false,
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onKeyDown": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "secondaryLabel": "",
      "theme": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "append": false,
        "ariaLabel": null,
        "buttonClassName": "",
        "className": "md-search-input__icon",
        "color": "",
        "description": "",
        "isAria": true,
        "name": "search_20",
        "onClick": null,
        "prepend": false,
        "size": null,
        "sizeOverride": false,
        "style": null,
        "title": "",
        "type": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaDescribedBy": null,
        "ariaLabel": null,
        "children": <Icon
          append={false}
          ariaLabel={null}
          buttonClassName=""
          className="md-search-input__icon"
          color=""
          description=""
          isAria={true}
          name="search_20"
          onClick={null}
          prepend={false}
          size={null}
          sizeOverride={false}
          style={null}
          title=""
          type=""
        />,
        "className": "md-search-input",
        "clear": false,
        "clearAriaLabel": null,
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": null,
        "iconNode": null,
        "id": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "label": "",
        "multiline": false,
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onKeyDown": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "secondaryLabel": "",
        "theme": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "append": false,
          "ariaLabel": null,
          "buttonClassName": "",
          "className": "md-search-input__icon",
          "color": "",
          "description": "",
          "isAria": true,
          "name": "search_20",
          "onClick": null,
          "prepend": false,
          "size": null,
          "sizeOverride": false,
          "style": null,
          "title": "",
          "type": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`tests for <SearchInput /> should match pill SnapShot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <SearchInput
    id="1"
    name="test"
    type="pill"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaDescribedBy": null,
      "ariaLabel": null,
      "children": <Icon
        append={false}
        ariaLabel={null}
        buttonClassName=""
        className="md-search-input__icon"
        color=""
        description=""
        isAria={true}
        name="search_16"
        onClick={null}
        prepend={false}
        size={null}
        sizeOverride={false}
        style={null}
        title=""
        type=""
      />,
      "className": "md-search-input md-search-input--pill",
      "clear": false,
      "clearAriaLabel": null,
      "defaultValue": "",
      "disabled": false,
      "errorArr": Array [],
      "htmlId": null,
      "iconNode": null,
      "id": "1",
      "inputClassName": "",
      "inputHelpText": "",
      "inputRef": null,
      "inputSize": "",
      "label": "",
      "multiline": false,
      "name": "test",
      "nestedLevel": 0,
      "onChange": null,
      "onDoneEditing": null,
      "onFocus": null,
      "onKeyDown": null,
      "onMouseDown": null,
      "placeholder": "",
      "readOnly": false,
      "secondaryLabel": "",
      "theme": "",
      "type": "text",
      "value": "",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "append": false,
        "ariaLabel": null,
        "buttonClassName": "",
        "className": "md-search-input__icon",
        "color": "",
        "description": "",
        "isAria": true,
        "name": "search_16",
        "onClick": null,
        "prepend": false,
        "size": null,
        "sizeOverride": false,
        "style": null,
        "title": "",
        "type": "",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaDescribedBy": null,
        "ariaLabel": null,
        "children": <Icon
          append={false}
          ariaLabel={null}
          buttonClassName=""
          className="md-search-input__icon"
          color=""
          description=""
          isAria={true}
          name="search_16"
          onClick={null}
          prepend={false}
          size={null}
          sizeOverride={false}
          style={null}
          title=""
          type=""
        />,
        "className": "md-search-input md-search-input--pill",
        "clear": false,
        "clearAriaLabel": null,
        "defaultValue": "",
        "disabled": false,
        "errorArr": Array [],
        "htmlId": null,
        "iconNode": null,
        "id": "1",
        "inputClassName": "",
        "inputHelpText": "",
        "inputRef": null,
        "inputSize": "",
        "label": "",
        "multiline": false,
        "name": "test",
        "nestedLevel": 0,
        "onChange": null,
        "onDoneEditing": null,
        "onFocus": null,
        "onKeyDown": null,
        "onMouseDown": null,
        "placeholder": "",
        "readOnly": false,
        "secondaryLabel": "",
        "theme": "",
        "type": "text",
        "value": "",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "append": false,
          "ariaLabel": null,
          "buttonClassName": "",
          "className": "md-search-input__icon",
          "color": "",
          "description": "",
          "isAria": true,
          "name": "search_16",
          "onClick": null,
          "prepend": false,
          "size": null,
          "sizeOverride": false,
          "style": null,
          "title": "",
          "type": "",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
